--- a/app/src/main/assets/apphelp.html
+++ b/app/src/main/assets/apphelp.html
@@ -1,7 +1,7 @@
 <p><b>Flight On Track</b> is Android app that tracks aircraft position, velocity and altitude based on the information received from a pilot's smartphone.
     The route can be tracked in real time, analyzed, shared or exported via <a href="http://flightontrack.com">http://flightontrack.com</a> website.
 </p>
-<span style="font-weight: bold;">Current Requirements:</span></div>
+<span style="font-weight: bold;">Current Requirements:</span>
 <ul>
     <li>Android 4.1 or higher smartphone with gps</li>
     <li>Data access over mobile network</li>
